--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <div class="d-flex mx-3 text-center">
     <div class="row">
-        <div class="col justify-content-start" >
+        <div class="col justify-content-start" >            <!-- DISPLAY USER NOTIFICATION -->
             <h2>Notifications</h2>
             {{#each invitations as |invitation| }}
             <div id ="invitation" class="card" style="width: 18rem;">
@@ -11,7 +11,7 @@
     </div>
 
         <div class="col-6 text-center"> 
-            <h1>Your Posts</h1>          
+            <h1>Your Posts</h1>                     <!-- DISPLAY USER POSTS -->
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                    
@@ -37,13 +37,28 @@
         </div>
         <div class="col">
           
-            <h2>Your Groups</h2>
+            <h2>Your Groups</h2>                <!-- DISPLAY USERS GROUPS -->
             {{#each memberships as |group| }}
             <div class="card" style="width: 18rem;">
                 <a class="btn btn-primary" href="/group/{{group.id}}" role="button">{{group.name}}</a>
             </div>
             
             {{/each}}
+            <div class="col">                   <!-- NEW GROUP FORM-->
+            <form data-id="{{id}}" class="form new-group">
+                <div class="form-group">
+                    <label for="group-title"></label>
+                    <input class="form-input" type="text" placeholder="New Group" id="group-title" />
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary" type="submit">Create</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+</div>
+</div>
         </div>
     </div>
 </div>
