new topic backend functional

--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -38,7 +38,7 @@
             <form data-id="{{id}}" class="form new-topic">  <!-- FORM FOR NEW TOPIC-->
                 <div class="form-group">
                     <label for="topic-title"></label>
-                    <input class="form-input" type="text" placeholder="New Topic" id="group-title" />
+                    <input class="form-input" type="text" placeholder="New Topic" id="new-topic" />
                 </div>
                 <div class="form-group">
                     <button class="btn btn-primary" type="submit">Create</button>
