--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,11 +2,11 @@
     <div class="row">
         <div class="col justify-content-start" >            <!-- DISPLAY USER NOTIFICATION -->
             <h2>Notifications</h2>
-            {{#each invitations as |invitation| }}
-            <div id ="invitation" class="card" style="width: 18rem;">
-                <button class="btn btn-primary btn-sm btn-block" data-group ="{{invitation.group_id}}" data-user ="{{invitation.user_id}}" data-id="{{invitation.id}}" href="/dashboard" role="button">Accept {{invitation.group.name}} Invite</button>
+            <div id="invitation" style="width: 18rem;">
+                {{#each invitations as |invitation| }}
+                    <button class="btn btn-primary btn-sm btn-block mb-3" data-group ="{{invitation.group_id}}" data-user ="{{invitation.user_id}}" data-id="{{invitation.id}}" href="/dashboard" role="button">Accept {{invitation.group.name}} Invite</button>
+                {{/each}}
             </div>
-            {{/each}}
         </div>
     </div>
 
